force-app/main/default/objects/Contact/fields/Contact_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Contact_Picklist__c</fullName>
    <label>Contact Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>contact value 1</fullName>
            </value>
            <value>
                <fullName>contact value 2</fullName>
            </value>
            <value>
                <fullName>contact value 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>