force-app/main/default/objects/Contact/fields/Test_Simple_Picklist1__c.field-meta.xml
<CustomField>
    <fullName>Test_Simple_Picklist1__c</fullName>
    <label>Test Simple Picklist1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apple</fullName>
            </value>
            <value>
                <fullName>Orange</fullName>
            </value>
            <value>
                <fullName>Banana</fullName>
            </value>
            <value>
                <fullName>Kiwi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>