force-app/main/default/objects/Contact/recordTypes/Contact_RT1.recordType-meta.xml
<RecordType>
    <fullName>Contact_RT1</fullName>
    <active>true</active>
    <label>Contact RT1</label>
</RecordType>